Пагинация и много рефакторинга